// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HelpView (de) > matches snapshot 1`] = `
"<div class="bg-white rounded-2xl p-10 border shadow-sm">
  <div class="flex flex-col gap-4 md:flex-row md:items-center md:justify-between mb-8">
    <div class="flex items-center gap-4 text-primary"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-question-mark-icon lucide-circle-question-mark">
        <circle cx="12" cy="12" r="10"></circle>
        <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path>
        <path d="M12 17h.01"></path>
      </svg>
      <div>
        <h1 class="text-2xl font-bold">Hilfe &amp; Q/A</h1>
        <p class="text-sm text-gray-500">Support &amp; häufige Fragen.</p>
      </div>
    </div>
  </div>
  <p class="text-gray-600 leading-7 max-w-3xl mb-8">Diese Seite erklärt die wichtigsten Schritte für Nutzer, die bereits eingeloggt sind. Du erhältst hier konkrete Hinweise für Deployments, Quotas und die nächsten praktischen Schritte.</p>
  <div class="grid gap-4 lg:grid-cols-2">
    <article class="rounded-3xl border border-slate-200 bg-slate-50 p-6">
      <div class="flex items-center gap-3 mb-4 text-primary"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-layers-icon lucide-layers">
          <path d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"></path>
          <path d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"></path>
          <path d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"></path>
        </svg>
        <h2 class="text-lg font-semibold">Wenn etwas nicht funktioniert</h2>
      </div>
      <p class="text-gray-600 leading-7 mb-4">Diese Checkliste hilft dir, die häufigsten Blocker schnell zu finden und zu verstehen, was du als nächstes prüfen solltest.</p>
      <ul class="list-disc list-inside space-y-2 text-gray-600">
        <li>Prüfe, ob du dein Quota-Limit erreicht hast.</li>
        <li>Stelle sicher, dass du die richtigen Berechtigungen hast.</li>
        <li>Sieh dir die Deployment-Details und Logs an, um den Fehler einzugrenzen.</li>
      </ul>
    </article>
    <article class="rounded-3xl border border-slate-200 bg-slate-50 p-6">
      <div class="flex items-center gap-3 mb-4 text-primary"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-book-open-icon lucide-book-open">
          <path d="M12 7v14"></path>
          <path d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"></path>
        </svg>
        <h2 class="text-lg font-semibold">Schritt-für-Schritt-Anleitung</h2>
      </div>
      <p class="text-sm font-semibold text-slate-700 mb-3">Deployment-Prozess</p>
      <ol class="list-decimal list-inside space-y-3 text-gray-600">
        <li>Öffne die Deployments-Übersicht und starte ein neues Deployment.</li>
        <li>Wähle die gewünschte App und App-Version aus.</li>
        <li>Ordne das Deployment einem Kurs oder Team zu und passe die Einstellungen an.</li>
        <li>Prüfe im Teams-Bereich, ob die benötigten Nutzer die richtigen Berechtigungen haben.</li>
        <li>Kontrolliere deine aktuellen Quotas, bevor du das Deployment ausführst.</li>
        <li>Starte das Deployment und überwache den Status sowie die Logs in der Detailansicht.</li>
      </ol>
      <div class="mt-6 space-y-4 text-gray-700">
        <div>
          <h3 class="font-semibold text-base">Dashboard</h3>
          <p class="text-gray-600">Schneller Überblick über Deployments, Systemstatus und verfügbare Ressourcen.</p>
        </div>
        <div>
          <h3 class="font-semibold text-base">Apps</h3>
          <p class="text-gray-600">Apps prüfen, Versionen auswählen und neue Anwendungen bereitstellen.</p>
        </div>
        <div>
          <h3 class="font-semibold text-base">Kurse</h3>
          <p class="text-gray-600">Deployments mit Kursen verknüpfen und Teilnehmergruppen organisieren.</p>
        </div>
        <div>
          <h3 class="font-semibold text-base">Deployments</h3>
          <p class="text-gray-600">Neue Deployments anlegen, den Status prüfen und Fehler analysieren.</p>
        </div>
      </div>
    </article>
    <article class="rounded-3xl border border-slate-200 bg-slate-50 p-6">
      <div class="flex items-center gap-3 mb-4 text-primary"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-book-open-icon lucide-book-open">
          <path d="M12 7v14"></path>
          <path d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"></path>
        </svg>
        <h2 class="text-lg font-semibold">Nützliche Projektlinks</h2>
      </div>
      <p class="text-gray-600 leading-7 mb-4">Direkter Zugriff auf die relevanten GitHub-Repositories.</p>
      <ul class="list-disc list-inside space-y-2 text-gray-600">
        <li><a href="https://github.com/six7-click-n-deploy/frontend" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">GitHub: Frontend-Repository</a></li>
        <li><a href="https://github.com/six7-click-n-deploy/backend" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">GitHub: Backend-Repository</a></li>
        <li><a href="https://github.com/six7-click-n-deploy/deployment" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">GitHub: Deployment-Repository</a></li>
        <li><a href="https://github.com/six7-click-n-deploy/worker" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">GitHub: Worker-Repository</a></li>
      </ul>
    </article>
  </div>
  <div class="mt-10 rounded-3xl border border-slate-200 bg-slate-50 p-6">
    <div class="flex items-center gap-3 mb-4 text-primary"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-triangle-alert-icon lucide-triangle-alert">
        <path d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"></path>
        <path d="M12 9v4"></path>
        <path d="M12 17h.01"></path>
      </svg>
      <h2 class="text-xl font-semibold">Häufige Fragen</h2>
    </div>
    <div class="mb-6 space-y-4 text-gray-600">
      <div>
        <h3 class="text-base font-semibold mb-2">Was sind Quotas?</h3>
        <p class="leading-7">Quotas setzen Grenzen für deine Ressourcen. Sie bestimmen zum Beispiel, wie viele Deployments oder Apps du gleichzeitig nutzen oder verwalten darfst.</p>
        <ul class="list-disc list-inside mt-3 space-y-2">
          <li>Maximale Anzahl gleichzeitiger Deployments</li>
          <li>Deckelung für Apps, Teams und Ressourcennutzung</li>
          <li>Sicherheitsmechanismus gegen Überlastung</li>
        </ul>
      </div>
    </div>
    <dl class="space-y-6 text-gray-700">
      <div>
        <dt class="font-semibold">Ich habe die Hilfe geöffnet – habe ich schon einen Account?</dt>
        <dd class="mt-2 text-gray-600">Ja. Diese Seite ist für Nutzer, die bereits eingeloggt sind. Ohne Konto könntest du hier nicht ankommen.</dd>
      </div>
      <div>
        <dt class="font-semibold">Warum kann ich kein Deployment starten?</dt>
        <dd class="mt-2 text-gray-600">Das liegt oft an Quota-Grenzen, fehlenden Rechten oder daran, dass die gewählte App nicht verfügbar ist. Prüfe zuerst diese drei Punkte.</dd>
      </div>
      <div>
        <dt class="font-semibold">Wo finde ich Details zu Fehlern?</dt>
        <dd class="mt-2 text-gray-600">Öffne die Deployment-Detailseite und lies die Logs sowie den Status. Dort stehen meist die wichtigsten Hinweise.</dd>
      </div>
    </dl>
  </div>
</div>"
`;

exports[`HelpView (en) > matches snapshot 1`] = `
"<div class="bg-white rounded-2xl p-10 border shadow-sm">
  <div class="flex flex-col gap-4 md:flex-row md:items-center md:justify-between mb-8">
    <div class="flex items-center gap-4 text-primary"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-question-mark-icon lucide-circle-question-mark">
        <circle cx="12" cy="12" r="10"></circle>
        <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path>
        <path d="M12 17h.01"></path>
      </svg>
      <div>
        <h1 class="text-2xl font-bold">Help &amp; Q/A</h1>
        <p class="text-sm text-gray-500">Support &amp; frequently asked questions.</p>
      </div>
    </div>
  </div>
  <p class="text-gray-600 leading-7 max-w-3xl mb-8">This page explains the most important steps for users who are already signed in. You get concrete guidance for deployments, quotas and next practical steps.</p>
  <div class="grid gap-4 lg:grid-cols-2">
    <article class="rounded-3xl border border-slate-200 bg-slate-50 p-6">
      <div class="flex items-center gap-3 mb-4 text-primary"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-layers-icon lucide-layers">
          <path d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"></path>
          <path d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"></path>
          <path d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"></path>
        </svg>
        <h2 class="text-lg font-semibold">If something does not work</h2>
      </div>
      <p class="text-gray-600 leading-7 mb-4">This checklist helps you find the most common blockers quickly and understand what to check next.</p>
      <ul class="list-disc list-inside space-y-2 text-gray-600">
        <li>Check whether you have reached your quota limit.</li>
        <li>Confirm you have the correct permissions.</li>
        <li>Look at deployment details and logs to narrow down the issue.</li>
      </ul>
    </article>
    <article class="rounded-3xl border border-slate-200 bg-slate-50 p-6">
      <div class="flex items-center gap-3 mb-4 text-primary"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-book-open-icon lucide-book-open">
          <path d="M12 7v14"></path>
          <path d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"></path>
        </svg>
        <h2 class="text-lg font-semibold">Step-by-step guide</h2>
      </div>
      <p class="text-sm font-semibold text-slate-700 mb-3">Deployment process</p>
      <ol class="list-decimal list-inside space-y-3 text-gray-600">
        <li>Open the deployments overview and start a new deployment.</li>
        <li>Choose the desired app and app version.</li>
        <li>Assign the deployment to a course or team and adjust the settings.</li>
        <li>Check team permissions to ensure the right users have access.</li>
        <li>Review your current quotas before launching the deployment.</li>
        <li>Start the deployment and monitor status and logs in the detail view.</li>
      </ol>
      <div class="mt-6 space-y-4 text-gray-700">
        <div>
          <h3 class="font-semibold text-base">Dashboard</h3>
          <p class="text-gray-600">Quickly see active deployments, system health, and available resources.</p>
        </div>
        <div>
          <h3 class="font-semibold text-base">Apps</h3>
          <p class="text-gray-600">Verify the app you need or add new applications and versions.</p>
        </div>
        <div>
          <h3 class="font-semibold text-base">Courses</h3>
          <p class="text-gray-600">Link deployments to courses and organize participant groups.</p>
        </div>
        <div>
          <h3 class="font-semibold text-base">Deployments</h3>
          <p class="text-gray-600">Create deployments, check status, and investigate errors.</p>
        </div>
      </div>
    </article>
    <article class="rounded-3xl border border-slate-200 bg-slate-50 p-6">
      <div class="flex items-center gap-3 mb-4 text-primary"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-book-open-icon lucide-book-open">
          <path d="M12 7v14"></path>
          <path d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"></path>
        </svg>
        <h2 class="text-lg font-semibold">Useful project links</h2>
      </div>
      <p class="text-gray-600 leading-7 mb-4">Quick access to the relevant GitHub repositories.</p>
      <ul class="list-disc list-inside space-y-2 text-gray-600">
        <li><a href="https://github.com/six7-click-n-deploy/frontend" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">GitHub: frontend repository</a></li>
        <li><a href="https://github.com/six7-click-n-deploy/backend" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">GitHub: backend repository</a></li>
        <li><a href="https://github.com/six7-click-n-deploy/deployment" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">GitHub: deployment repository</a></li>
        <li><a href="https://github.com/six7-click-n-deploy/worker" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">GitHub: worker repository</a></li>
      </ul>
    </article>
  </div>
  <div class="mt-10 rounded-3xl border border-slate-200 bg-slate-50 p-6">
    <div class="flex items-center gap-3 mb-4 text-primary"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-triangle-alert-icon lucide-triangle-alert">
        <path d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"></path>
        <path d="M12 9v4"></path>
        <path d="M12 17h.01"></path>
      </svg>
      <h2 class="text-xl font-semibold">Frequently asked questions</h2>
    </div>
    <div class="mb-6 space-y-4 text-gray-600">
      <div>
        <h3 class="text-base font-semibold mb-2">What are quotas?</h3>
        <p class="leading-7">Quotas set limits for your resources. They determine, for example, how many deployments or apps you can use or manage at the same time.</p>
        <ul class="list-disc list-inside mt-3 space-y-2">
          <li>Maximum number of simultaneous deployments</li>
          <li>Caps for apps, teams, and resource consumption</li>
          <li>A safeguard against overload</li>
        </ul>
      </div>
    </div>
    <dl class="space-y-6 text-gray-700">
      <div>
        <dt class="font-semibold">I opened the help page – do I already have an account?</dt>
        <dd class="mt-2 text-gray-600">Yes. This page is for users who are already logged in. Without an account you would not be able to reach it.</dd>
      </div>
      <div>
        <dt class="font-semibold">Why can't I start a deployment?</dt>
        <dd class="mt-2 text-gray-600">This is usually caused by quota limits, missing permissions, or the selected app not being available. Check these three points first.</dd>
      </div>
      <div>
        <dt class="font-semibold">Where can I find more details about errors?</dt>
        <dd class="mt-2 text-gray-600">Open the deployment details and read the logs and status messages. They usually contain the most important clues.</dd>
      </div>
    </dl>
  </div>
</div>"
`;
